--- a/final/refs.bib
+++ b/final/refs.bib
@@ -5,6 +5,149 @@
   url    = {{\url{https://www.aquasec.com/blog/a-brief-history-of-containers-from-1970s-chroot-to-docker-2016}. [Accessed: \today]}}
 }
 
+@article{acm:1,
+  author     = {Randal, Allison},
+  title      = {The Ideal Versus the Real: Revisiting the History of Virtual Machines and Containers},
+  year       = {2020},
+  issue_date = {January 2021},
+  publisher  = {Association for Computing Machinery},
+  address    = {New York, NY, USA},
+  volume     = {53},
+  number     = {1},
+  issn       = {0360-0300},
+  url        = {\url{https://doi.org/10.1145/3365199}},
+  doi        = {10.1145/3365199},
+  journal    = {ACM Comput. Surv.},
+  month      = {Feb.},
+  articleno  = {5},
+  numpages   = {31}
+}
+
+@article{acm:14,
+  author     = {Mart\'{\i}nez-Magdaleno, Samuel and Morales-Rocha, Victor and Parra, Ram\'{o}n},
+  title      = {A review of security risks and countermeasures in containers},
+  year       = {2021},
+  issue_date = {2021},
+  publisher  = {Inderscience Publishers},
+  address    = {Geneva 15, CHE},
+  volume     = {16},
+  number     = {3},
+  issn       = {1747-8405},
+  url        = {\url{https://doi.org/10.1504/ijsn.2021.117867}},
+  journal    = {Int. J. Secur. Netw.},
+  month      = {Jan.},
+  pages      = {183-190},
+  numpages   = {7}
+}
+
+@inproceedings{acm:2,
+  author    = {Gantikow, Holger and Walter, Steffen and Reich, Christoph},
+  title     = {Rootless Containers with Podman for HPC},
+  year      = {2020},
+  isbn      = {978-3-030-59850-1},
+  publisher = {Springer-Verlag},
+  address   = {Berlin, Heidelberg},
+  url       = {\url{https://doi.org/10.1007/978-3-030-59851-8_23}},
+  doi       = {10.1007/978-3-030-59851-8_23},
+  booktitle = {High Performance Computing: ISC High Performance 2020 International Workshops, Frankfurt, Germany, June 21-25, 2020, Revised Selected Papers},
+  pages     = {343-354},
+  numpages  = {12},
+  location  = {Frankfurt am Main, Germany}
+}
+
+@inproceedings{acm:3,
+  author    = {Anjali and Caraza-Harter, Tyler and Swift, Michael M.},
+  title     = {Blending containers and virtual machines: a study of firecracker and gVisor},
+  year      = {2020},
+  isbn      = {9781450375542},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  url       = {\url{https://doi.org/10.1145/3381052.3381315}},
+  doi       = {10.1145/3381052.3381315},
+  booktitle = {Proceedings of the 16th ACM SIGPLAN/SIGOPS International Conference on Virtual Execution Environments},
+  pages     = {101-113},
+  numpages  = {13},
+  location  = {Lausanne, Switzerland},
+  series    = {VEE '20}
+}
+
+@inproceedings{acm:4,
+  author    = {Williams, Dan and Koller, Ricardo and Lucina, Martin and Prakash, Nikhil},
+  title     = {Unikernels as Processes},
+  year      = {2018},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  doi       = {10.1145/3267809.3267845},
+  booktitle = {Proceedings of the ACM Symposium on Cloud Computing},
+  pages     = {199-211},
+  numpages  = {13},
+  keywords  = {cloud computing, security, unikernels, virtualization},
+  location  = {Carlsbad, CA, USA},
+  series    = {SoCC '18},
+  url       = {\url{https://doi.org/10.1145/3267809.3267845}}
+}
+
+@inproceedings{acm:5,
+  author    = {Jian, Zhiqiang and Chen, Long},
+  title     = {A Defense Method against Docker Escape Attack},
+  year      = {2017},
+  isbn      = {9781450348676},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  url       = {\url{https://doi.org/10.1145/3058060.3058085}},
+  doi       = {10.1145/3058060.3058085},
+  booktitle = {Proceedings of the 2017 International Conference on Cryptography, Security and Privacy},
+  pages     = {142-146},
+  numpages  = {5},
+  location  = {Wuhan, China},
+  series    = {ICCSP '17}
+}
+
+@inproceedings{acm:6,
+  author    = {B\'{e}lair, Maxime and Laniepce, Sylvie and Menaud, Jean-Marc},
+  title     = {Leveraging Kernel Security Mechanisms to Improve Container Security: a Survey},
+  year      = {2019},
+  isbn      = {9781450371643},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  url       = {\url{https://doi.org/10.1145/3339252.3340502}},
+  doi       = {10.1145/3339252.3340502},
+  booktitle = {Proceedings of the 14th International Conference on Availability, Reliability and Security},
+  articleno = {76},
+  numpages  = {6},
+  location  = {Canterbury, CA, United Kingdom},
+  series    = {ARES '19}
+}
+
+@inproceedings{acm:7,
+  author    = {Lopes, Nuno and Martins, Rolando and Correia, Manuel Eduardo and Serrano, S\'{e}rgio and Nunes, Francisco},
+  title     = {Container Hardening Through Automated Seccomp Profiling},
+  year      = {2021},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  url       = {\url{https://doi.org/10.1145/3429885.3429966}},
+  doi       = {10.1145/3429885.3429966},
+  booktitle = {Proceedings of the 2020 6th International Workshop on Container Technologies and Container Clouds},
+  pages     = {31-36},
+  numpages  = {6},
+  location  = {Delft, Netherlands},
+  series    = {WOC'20}
+}
+
+@misc{aqua:dirtypipe,
+  author = {Rory McCune},
+  title  = {{Dirty Pipe Linux Vulnerability: Overwriting Files in Container Images}},
+  note   = {\textit{aquasec.com}, Mar. 8, 2022},
+  url    = {{\url{https://www.aquasec.com/blog/cve-2022-0847-dirty-pipe-linux-vulnerability/}. [Accessed: \today]}}
+}
+
+@misc{aqua:dirtypipe1,
+  author = {{R. McCune}},
+  title  = {{Linux Kernel Vulnerability: Escaping Containers by Abusing Cgroups}},
+  note   = {\textit{aquasec.com}, Mar. 9, 2022},
+  url    = {{\url{https://www.aquasec.com/blog/new-linux-kernel-vulnerability-escaping-containers-by-abusing-cgroups}. [Accessed: \today]}}
+}
+
 @article{arxiv:1,
   author  = {Omar Javed and Salman Toor},
   title   = {Understanding the Quality of Container Security Vulnerability Detection Tools},
@@ -21,11 +164,63 @@
   url    = {{\url{https://www.docker.com/blog/runc}. [Accessed: \today]}}
 }
 
+@misc{b:escape,
+  author = {},
+  title  = {Understanding Docker container escapes},
+  note   = {\textit{blog.trailofbits.com}, Jul. 19, 2019},
+  url    = {{\url{https://blog.trailofbits.com/2019/07/19/understanding-docker-container-escapes}. [Accessed: \today]}}
+}
+
 @misc{b:ianlewis1,
   author = {Ian Lewis},
   title  = {Container Runtimes Part 1: An Introduction to Container Runtimes},
   note   = {\textit{ianlewis.org}, Dec. 6, 2017},
   url    = {{\url{https://www.ianlewis.org/en/container-runtimes-part-1-introduction-container-r}. [Accessed: \today]}}
+}
+
+@misc{b:ianlewis3,
+  author = {Ian Lewis},
+  title  = {Container Runtimes Part 3: High-Level Runtimes},
+  note   = {\textit{ianlewis.org}, Oct. 30, 2018},
+  url    = {{\url{https://www.ianlewis.org/en/container-runtimes-part-3-high-level-runtimes}. [Accessed: \today]}}
+}
+
+@book{b:lxc,
+  title     = {Practical LXC and LXD: linux containers for virtualization and orchestration},
+  author    = {Senthil Kumaran, S},
+  year      = {2017},
+  publisher = {Springer}
+}
+
+@misc{b:nonewpriv,
+  author = {Rory McCune},
+  title  = {Docker Capabilities and no-new-privileges},
+  note   = {\textit{raesene.github.io}, Jun. 1, 2019},
+  url    = {{\url{https://raesene.github.io/blog/2019/06/01/docker-capabilities-and-no-new-privs}. [Accessed: \today]}}
+}
+
+@misc{b:terenceli,
+  author = {Terenceli},
+  title  = {runc internals, part 3: runc double clone},
+  note   = {\textit{terenceli.github.io}, Dec. 28, 2021},
+  url    = {{\url{https://terenceli.github.io/%E6%8A%80%E6%9C%AF/2021/12/28/runc-internals-3}. [Accessed: \today]}}
+} 
+
+@book{book:docker,
+  author    = {Miell, Ian and Sayers, Aidan},
+  title     = {Docker in practice, second edition},
+  publisher = {Shelter Island, NY: Manning Publications},
+  year      = {2019. Accessed: \today},
+  url       = {\url{https://www.manning.com/books/docker-in-practice-second-edition}}
+}
+
+
+@article{book:kube,
+  author  = {Weissman, Ben and Nocentino, Anthony E.},
+  title   = {Installing Kubernetes},
+  journal = {in Azure Arc-enabled Data Services Revealed: Deploying Azure Data Services on Any Infrastructure},
+  note    = {{Berkeley, CA: Apress, 2022, pp. 65-87. Accessed: \today}},
+  url     = {\url{https://doi.org/10.1007/978-1-4842-8085-0\_4}}
 }
 
 @book{book:rice,
@@ -44,6 +239,67 @@
   number    = {},
   pages     = {252-257},
   doi       = {10.1109/CyberC55534.2022.00049}
+}
+
+
+@inproceedings{c:10,
+  author    = {Acharya, Ashijeet and Fanguède, Jérémy and Paolino, Michele and Raho, Daniel},
+  booktitle = {2018 European Conference on Networks and Communications (EuCNC)},
+  title     = {A Performance Benchmarking Analysis of Hypervisors Containers and Unikernels on ARMv8 and x86 CPUs},
+  year      = {2018},
+  pages     = {282-9},
+  doi       = {10.1109/EuCNC.2018.8443248},
+  url       = {\url{https://ieeexplore.ieee.org/document/8443248}}
+}
+
+@inproceedings{c:11,
+  author    = {Randazzo, Alessandro and Tinnirello, Ilenia},
+  booktitle = {2019 Sixth International Conference on Internet of Things: Systems, Management and Security (IOTSMS)},
+  title     = {Kata Containers: An Emerging Architecture for Enabling MEC Services in Fast and Secure Way},
+  year      = {2019},
+  pages     = {209-214},
+  url       = {\url{https://ieeexplore.ieee.org/document/8939164}},
+  doi       = {10.1109/IOTSMS48152.2019.8939164}
+}
+
+@inproceedings{c:12,
+  author    = {Aleksa Sarai and Akihiro Suda},
+  title     = {The State of Rootless Containers},
+  year      = {Aug. 31, 2018},
+  publisher = {},
+  address   = {presented at the Open Source Summit North America 2018, New York, NY, USA},
+  url       = {\url{https://ossna18.sched.com/event/FAPP/the-state-of-rootless-containers-aleksa-sarai-suse-llc-akihiro-suda-ntt}},
+  booktitle = {}
+}
+
+@inproceedings{c:13,
+  author    = {Thomas Cameron},
+  title     = {{Security Enhanced Linux for mere mortals}},
+  year      = {May 10, 2018},
+  publisher = {},
+  address   = {presented at the Red Hat Summit 2018, San Francisco, CA, USA},
+  url       = {\url{https://youtu.be/_WOKRaM-HI4}},
+  booktitle = {}
+}
+
+@inproceedings{c:14,
+  author    = {Sengupta, Raunak and Sai Prashanth, R S and Pradhan, Yash and Rajashekar, Vishwas and Honnavalli, Prasad B},
+  booktitle = {2021 IEEE International Conference on Electronics, Computing and Communication Technologies (CONECCT)},
+  title     = {{Metapod: Accessible Hardening of Docker Containers for Enhanced Security}},
+  year      = {2021},
+  pages     = {01-06},
+  doi       = {10.1109/CONECCT52877.2021.9622572},
+  url       = {\url{https://ieeexplore.ieee.org/abstract/document/9622572}}
+}
+
+@inproceedings{c:15,
+  author    = {Brady, Kelly and Moon, Seung and Nguyen, Tuan and Coffman, Joel},
+  booktitle = {2020 10th Annual Computing and Communication Workshop and Conference (CCWC)},
+  title     = {{Docker Container Security in Cloud Computing}},
+  year      = {2020},
+  pages     = {0975-0980},
+  doi       = {10.1109/CCWC47524.2020.9031195},
+  url       = {\url{https://ieeexplore.ieee.org/abstract/document/9031195}}
 }
 
 @inproceedings{c:2,
@@ -74,6 +330,103 @@
   year      = {2020}
 }
 
+@inproceedings{c:5,
+  author    = {Kumar, Rakesh and Thangaraju, B},
+  booktitle = {2020 IEEE International Conference on Electronics, Computing and Communication Technologies (CONECCT)},
+  title     = {Performance Analysis Between RunC and Kata Container Runtime},
+  year      = {2020},
+  volume    = {},
+  number    = {},
+  pages     = {1-4},
+  doi       = {10.1109/CONECCT50063.2020.9198653}
+}
+
+@inproceedings{c:6,
+  author    = {de Velp, Guillaume Everarts and Rivi\`{e}re, Etienne and Sadre, Ramin},
+  title     = {Understanding the performance of container execution environments},
+  year      = {2021},
+  isbn      = {9781450382090},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  url       = {\url{https://doi.org/10.1145/3429885.3429967}},
+  doi       = {10.1145/3429885.3429967},
+  booktitle = {Proceedings of the 2020 6th International Workshop on Container Technologies and Container Clouds},
+  pages     = {37-42},
+  numpages  = {6},
+  location  = {Delft, Netherlands},
+  series    = {WOC'20}
+}
+
+@inproceedings{c:7,
+  author    = {Gantikow, Holger and Walter, Steffen and Reich, Christoph},
+  title     = {Rootless Containers with Podman for HPC},
+  year      = {2020},
+  isbn      = {978-3-030-59850-1},
+  publisher = {Springer-Verlag},
+  address   = {Berlin, Heidelberg},
+  url       = {\url{https://doi.org/10.1007/978-3-030-59851-8\_23}},
+  booktitle = {High Performance Computing: ISC High Performance 2020 International Workshops, Frankfurt, Germany, June 21-25, 2020, Revised Selected Papers},
+  pages     = {343-354},
+  numpages  = {12},
+  location  = {Frankfurt am Main, Germany}
+}
+
+@inproceedings{c:8,
+  author    = {Obradov, Anja and Usorac, Srdjan and Antic, Marija},
+  booktitle = {2021 44th International Convention on Information, Communication and Electronic Technology (MIPRO)},
+  title     = {Android runtime service optimization for execution inside LXC},
+  year      = {2021},
+  pages     = {995-997},
+  url       = {\url{https://ieeexplore.ieee.org/abstract/document/9597181}},
+  doi       = {10.23919/MIPRO52101.2021.9597181}
+}
+
+@inproceedings{c:9,
+  author    = {Struye, Jakob and Spinnewyn, Bart and Spaey, Kathleen and Bonjean, Kristiaan and Latre, Steven},
+  booktitle = {2017 13th International Conference on Network and Service Management (CNSM)},
+  title     = {Assessing the value of containers for NFVs: A detailed network performance study},
+  year      = {2017},
+  pages     = {1-7},
+  doi       = {10.23919/CNSM.2017.8256024},
+  url       = {\url{https://ieeexplore.ieee.org/document/8256024}}
+}
+
+@techreport{cis:docker,
+  title       = {{CIS Docker Benchmarks}},
+  author      = {},
+  year        = {2019},
+  institution = {Center for Internet Security},
+  url         = {\url{https://www.cisecurity.org/benchmark/docker}}
+}
+
+@misc{d:alternative-runtimes,
+  author = {},
+  title  = {Alternative container runtimes},
+  note   = {\textit{docs.docker.com}, Feb. 21, 2024},
+  url    = {{\url{https://docs.docker.com/engine/alternative-runtimes}. [Accessed: \today]}}
+}
+
+@misc{d:config,
+  author = {},
+  title  = {opencontainers/runtime-spec — Configuration},
+  note   = {\textit{github.com}, Sep. 28, 2021},
+  url    = {{\url{https://github.com/opencontainers/runtime-spec/blob/main/config.md}. [Accessed: \today]}}
+}
+
+@misc{d:dockerapparmor,
+  author = {},
+  title  = {{AppArmor security profiles for Docker}},
+  note   = {\textit{docs.docker.com}},
+  url    = {{\url{https://docs.docker.com/engine/security/apparmor}. [Accessed: \today]}}
+}
+
+@misc{d:dockerrootless,
+  author = {},
+  title  = {Run the Docker daemon as a non-root user (Rootless mode)},
+  note   = {\textit{docs.docker.com}, Feb. 21, 2024},
+  url    = {{\url{https://docs.docker.com/engine/security/rootless}. [Accessed: \today]}}
+}
+
 @misc{d:dockerrun,
   author = {},
   title  = {Running containers},
@@ -81,6 +434,12 @@
   url    = {{\url{https://docs.docker.com/engine/reference/run}. [Accessed: \today]}}
 }
 
+@misc{d:dockerseccomp,
+  author = {},
+  title  = {Seccomp security profiles for Docker},
+  note   = {\textit{docs.docker.com}},
+  url    = {{\url{https://docs.docker.com/engine/security/seccomp}. [Accessed: \today]}}
+}
 
 @misc{d:dockersecurity,
   author = {},
@@ -89,11 +448,135 @@
   url    = {{\url{https://docs.docker.com/engine/security}. [Accessed: \today]}}
 }
 
+@misc{d:enhancements,
+  author = {},
+  title  = {KEP-127: Support User Namespaces},
+  note   = {\textit{github.com}, Feb. 8, 2024},
+  url    = {{\url{https://github.com/kubernetes/enhancements/blob/master/keps/sig-node/127-user-namespaces/README.md}. [Accessed: \today]}}
+}
+
+@misc{d:getting-started,
+  author = {},
+  title  = {Getting started with containerd},
+  note   = {\textit{github.com}, Feb. 28, 2024},
+  url    = {{\url{https://github.com/containerd/containerd/blob/main/docs/getting-started.md}. [Accessed: \today]}}
+}
+
+@misc{d:implementations,
+  author = {},
+  title  = {opencontainers/runtime-spec — Implementations},
+  note   = {\textit{github.com}, Sep. 28, 2021},
+  url    = {{\url{https://github.com/opencontainers/runtime-spec/blob/main/implementations.md}. [Accessed: \today]}}
+}
+
+@misc{d:kernel1,
+  author = {},
+  title  = {No New Privileges Flag},
+  note   = {\textit{kernel.org}},
+  url    = {{\url{https://www.kernel.org/doc/html/v4.19/userspace-api/no_new_privs.html}. [Accessed: \today]}}
+}
+
+@misc{d:kernelseccomp,
+  author = {},
+  title  = {{Seccomp BPF (SECure COMPuting with filters)}},
+  note   = {\textit{kernel.org}},
+  url    = {{\url{https://www.kernel.org/doc/html/v4.16/userspace-api/seccomp_filter.html}. [Accessed: \today]}}
+}
+
+@misc{d:kernelsmack,
+  author = {},
+  title  = {Smack},
+  note   = {\textit{kernel.org}},
+  url    = {{\url{https://www.kernel.org/doc/html/v4.18/admin-guide/LSM/Smack.html}. [Accessed: \today]}}
+}
+
+@misc{d:ocilinux,
+  author = {},
+  title  = {Linux Container Configuration},
+  note   = {\textit{github.com}},
+  url    = {{\url{https://github.com/opencontainers/runtime-spec/blob/main/config-linux.md}. [Accessed: \today]}}
+}
+
 @misc{d:ocirunspec,
   author = {},
   title  = {Open Container Initiative Runtime Specification},
-  note   = {\textit{dgithub.com}, May 16, 2023},
+  note   = {\textit{github.com}, May 16, 2023},
   url    = {{\url{https://github.com/opencontainers/runtime-spec/blob/main/spec.md}. [Accessed: \today]}}
+}
+
+@misc{gh:buildah,
+  author = {},
+  title  = {containers/buildah},
+  note   = {\textit{github.com}},
+  url    = {{\url{https://github.com/containers/buildah}. [Accessed: \today]}}
+}
+
+@misc{gh:crun,
+  author = {},
+  title  = {containers/crun},
+  note   = {\textit{github.com}},
+  url    = {{\url{https://github.com/containers/crun}. [Accessed: \today]}}
+}
+
+@misc{gh:docker-bench,
+  author = {},
+  title  = {aquasecurity/docker-bench},
+  note   = {\textit{github.com}},
+  url    = {{\url{https://github.com/aquasecurity/docker-bench}. [Accessed: \today]}}
+}
+
+@misc{gh:docker-bench-security,
+  author = {},
+  title  = {docker/docker-bench-security},
+  note   = {\textit{github.com}},
+  url    = {{\url{https://github.com/docker/docker-bench-security}. [Accessed: \today]}}
+}
+
+@misc{gh:gvisor,
+  author = {},
+  title  = {google/gvisor},
+  note   = {\textit{github.com}},
+  url    = {{\url{https://github.com/google/gvisor}. [Accessed: \today]}}
+}
+
+@misc{gh:nsexec,
+  author = {},
+  title  = {nsexec.c},
+  note   = {\textit{github.com}},
+  url    = {{\url{https://github.com/opencontainers/runc/blob/main/libcontainer/nsenter/nsexec.c}. [Accessed: \today]}}
+}
+
+@misc{gh:rkt,
+  author = {},
+  title  = {rkt},
+  note   = {\textit{github.com}},
+  url    = {{\url{https://github.com/rkt/rkt}. [Accessed: \today]}}
+}
+
+@misc{gh:runc,
+  author = {},
+  title  = {opencontainers/runc},
+  note   = {\textit{github.com}},
+  url    = {{\url{https://github.com/opencontainers/runc }. [Accessed: \today]}}
+}
+
+@misc{gh:runnc,
+  author = {},
+  title  = {nabla-containers/runnc},
+  note   = {\textit{github.com}},
+  url    = {{\url{https://github.com/nabla-containers/runnc}. [Accessed: \today]}}
+}
+
+@article{ieee:1,
+  author  = {Sultan, Sari and Ahmad, Imtiaz and Dimitriou, Tassos},
+  journal = {IEEE Access},
+  title   = {Container Security: Issues, Challenges, and the Road Ahead},
+  year    = {2019},
+  volume  = {7},
+  number  = {},
+  pages   = {52976-52996},
+  doi     = {10.1109/ACCESS.2019.2911732},
+  url     = {\url{https://ieeexplore.ieee.org/document/8693491}}
 }
 
 @article{j:1,
@@ -132,6 +615,28 @@
   url    = {{\url{https://man7.org/linux/man-pages/man7/cgroups.7.html}. [Accessed: \today]}}
 }
 
+@misc{m:crun,
+  author = {},
+  title  = {crun(1) General Commands Manual},
+  note   = {\textit{man.archlinux.org}},
+  url    = {{\url{https://man.archlinux.org/man/crun.1.en}. [Accessed: \today]}}
+}
+
+@misc{m:fifo,
+  author = {},
+  title  = {fifo(7) — Linux manual page},
+  note   = {\textit{man7.org}, Dec. 22, 2023},
+  url    = {{\url{https://man7.org/linux/man-pages/man7/fifo.7.html}. [Accessed: \today]}}
+}
+
+@misc{m:lxc,
+  author = {},
+  title  = {lxc(7) — Linux manual page},
+  note   = {\textit{man7.org}, Jun. 16, 2022},
+  url    = {{\url{https://man7.org/linux/man-pages/man7/lxc.7.html}. [Accessed: \today]}}
+}
+
+
 @misc{m:namespaces,
   author = {},
   title  = {namespaces(7) — Linux manual page},
@@ -141,9 +646,58 @@
 
 @misc{m:runc,
   author = {},
-  title  = {runc(8)	System Manager's Manual},
+  title  = {runc(8) System Manager's Manual},
   note   = {\textit{man.archlinux.org}},
   url    = {{\url{https://man.archlinux.org/man/extra/runc/runc.8.en}. [Accessed: \today]}}
+}
+
+@misc{m:runc-create,
+  author = {},
+  title  = {runc-create(8) System Manager's Manual},
+  note   = {\textit{man.archlinux.org}},
+  url    = {{\url{https://man.archlinux.org/man/runc-create.8.en}. [Accessed: \today]}}
+}
+
+@misc{m:seccomp,
+  author = {},
+  title  = {seccomp(2) — Linux manual page},
+  note   = {\textit{man7.org}, Dec. 22, 2023},
+  url    = {{\url{https://man7.org/linux/man-pages/man2/seccomp.2.html}. [Accessed: \today]}}
+}
+
+@misc{m:usernamespaces,
+  author = {},
+  title  = {user\_namespaces(7) — Linux manual page},
+  note   = {\textit{man7.org}, Dec. 22, 2023},
+  url    = {{\url{https://man7.org/linux/man-pages/man7/user_namespaces.7.html}. [Accessed: \today]}}
+}
+
+@techreport{nist:docker,
+  title       = {{Application Container Security Guide}},
+  author      = {Souppaya, Murugiah and Morello, John and Scarfone, Karen},
+  year        = {2017},
+  institution = {National Institute of Standards and Technology},
+  url         = {\url{https://doi.org/10.6028/NIST.SP.800-190}}
+}
+
+@misc{nvd:CVE-2021-44228,
+  author = {},
+  title  = {{CVE-2021-44228 Detail}},
+  note   = {\textit{National Vulnerability Database}, Apr. 25, 2024},
+  url    = {{\url{https://nvd.nist.gov/vuln/detail/CVE-2021-44228}. [Accessed: \today]}}
+}
+
+
+@article{pcs:1,
+  title   = {A review of native container security for running applications},
+  journal = {Procedia Computer Science},
+  volume  = {175},
+  pages   = {157-164},
+  year    = {2020},
+  issn    = {1877-0509},
+  doi     = {https://doi.org/10.1016/j.procs.2020.07.025},
+  url     = {\url{https://www.sciencedirect.com/science/article/pii/S187705092031704X}},
+  author  = {Olivier Flauzac and Fabien Mauhourat and Florent Nolot}
 }
 
 @misc{report:dynamic,
@@ -151,6 +705,76 @@
   title  = {Industry's First Dynamic Analysis of 4 million Publicly Available Docker Hub Container Images},
   note   = {\textit{prevasio.io}, Dec. 1, 2020},
   url    = {{\url{https://uploads-ssl.webflow.com/609ccd86b14ba6e17f9fbce4/643ba6fc599bb82bfdea2456_Red_Kangaroo.pdf}. [Accessed: \today]}}
+}
+
+@misc{s:CVE-2019-5736,
+  author = {Aleksa Sarai},
+  title  = {{CVE-2019-5736: runc container breakout (all versions)}},
+  note   = {\textit{seclists.org/}, Feb. 12, 2019},
+  url    = {{\url{https://seclists.org/oss-sec/2019/q1/119}. [Accessed: \today]}}
+}
+
+@misc{s:CVE-2021-30465,
+  author = {},
+  title  = {{CVE-2021-30465}},
+  note   = {May 27, 2021},
+  url    = {{\url{https://www.cve.org/CVERecord?id=CVE-2021-30465}. [Accessed: \today]}}
+}
+
+@misc{s:CVE-2022-0492,
+  author = {Yuval Avrahami},
+  title  = {{New Linux Vulnerability CVE-2022-0492 Affecting Cgroups: Can Containers Escape?}},
+  note   = {\textit{unit42.paloaltonetworks.com}, Mar. 3, 2022},
+  url    = {{\url{https://unit42.paloaltonetworks.com/cve-2022-0492-cgroups}. [Accessed: \today]}}
+}
+
+@misc{s:linux38,
+  author = {},
+  title  = {{KernelNewbies: Linux\_3.8}},
+  note   = {\textit{kernelnewbies.org}, Dec. 30, 2017},
+  url    = {{\url{https://kernelnewbies.org/Linux_3.8}. [Accessed: \today]}}
+}
+
+@misc{s:linux45,
+  author = {},
+  title  = {{KernelNewbies: Linux\_4.5}},
+  note   = {\textit{kernelnewbies.org}, Dec. 30, 2017},
+  url    = {{\url{https://kernelnewbies.org/Linux_4.5}. [Accessed: \today]}}
+}
+
+@misc{s:linux56,
+  author = {},
+  title  = {{KernelNewbies: Linux\_5.6}},
+  note   = {\textit{kernelnewbies.org}, Apr. 23, 2020},
+  url    = {{\url{https://kernelnewbies.org/Linux_5.6}. [Accessed: \today]}}
+}
+
+@misc{s:loadpin,
+  author = {Jonathan Corbet},
+  title  = {{The LoadPin security module}},
+  note   = {\textit{lwn.net}, Apr. 6, 2016},
+  url    = {{\url{https://lwn.net/Articles/682302}. [Accessed: \today]}}
+}
+
+@misc{s:lsm,
+  author = {Shaun Ruffell},
+  title  = {{A brief tour of Linux Security Modules}},
+  note   = {\textit{starlab.io}, Nov. 21, 2019},
+  url    = {{\url{https://www.starlab.io/blog/a-brief-tour-of-linux-security-modules}. [Accessed: \today]}}
+}
+
+@misc{s:lxc,
+  author = {},
+  title  = {Getting started},
+  note   = {\textit{linuxcontainers.org}},
+  url    = {{\url{https://linuxcontainers.org/lxc/getting-started}. [Accessed: \today]}}
+}
+
+@misc{s:lxcseccomp,
+  author = {},
+  title  = {lxc.container.conf},
+  note   = {\textit{linuxcontainers.org}, Jun. 03, 2021},
+  url    = {{\url{https://linuxcontainers.org/lxc/manpages/man5/lxc.container.conf.5.html}. [Accessed: \today]}}
 }
 
 @misc{s:namespaces,
@@ -162,7 +786,95 @@
 
 @misc{s:oci,
   author = {},
-  title  = {Open Container Initiative},
+  title  = {{Open Container Initiative}},
   note   = {},
   url    = {{\url{https://opencontainers.org/}. [Accessed: \today]}}
 }
+
+@misc{s:owasp10,
+  author = {},
+  title  = {{OWASP Top Ten}},
+  note   = {\textit{unit42.paloaltonetworks.com}, Oct. 1, 2021},
+  url    = {{\url{https://owasp.org/www-project-top-ten}. [Accessed: \today]}}
+}
+
+@misc{s:rh1,
+  author = {},
+  title  = {On-entry container attack - CVE-2016-9962},
+  note   = {\textit{access.redhat.com}, Jan. 11, 2017},
+  url    = {{\url{https://access.redhat.com/security/vulnerabilities/cve-2016-9962}. [Accessed: \today]}}
+}
+
+@misc{s:unit42,
+  author = {Yuval Avrahami},
+  title  = {Breaking out of Docker via runC — Explaining CVE-2019-5736},
+  note   = {\textit{unit42.paloaltonetworks.com}, Feb. 21, 2019},
+  url    = {{\url{https://unit42.paloaltonetworks.com/breaking-docker-via-runc-explaining-cve-2019-5736/}. [Accessed: \today]}}
+}
+
+@misc{s:what-is-selinux,
+  author = {},
+  title  = {{What is SELinux?}},
+  note   = {\textit{redhat.com}, Aug. 30, 2019},
+  url    = {{\url{https://www.redhat.com/en/topics/linux/what-is-selinux}. [Accessed: \today]}}
+}
+
+@misc{s:wikiapparmor,
+  author = {},
+  title  = {{AppArmor — Linux kernel security module}},
+  url    = {{\url{https://wiki.apparmor.net/}. [Accessed: \today]}}
+}
+
+@article{sd:integrity,
+  author  = {Marco {De Benedictis} and Antonio Lioy},
+  title   = {{Integrity verification of Docker containers for a lightweight cloud environment}},
+  journal = {Future Generation Computer Systems},
+  volume  = {97},
+  pages   = {236-246},
+  year    = {2019},
+  issn    = {0167-739X},
+  url     = {\url{https://doi.org/10.1016/j.future.2019.02.026}}
+}
+
+@article{sd:licsec,
+  author  = {Hui Zhu and Christian Gehrmann},
+  title   = {{Lic-Sec: An enhanced AppArmor Docker security profile generator}},
+  journal = {Journal of Information Security and Applications},
+  volume  = {61},
+  pages   = {102924},
+  year    = {2021},
+  issn    = {2214-2126},
+  url     = {\url{https://doi.org/10.1016/j.jisa.2021.102924}}
+}
+
+@misc{sof:1,
+  author = {TheDiveO},
+  title  = {Libcontainer: What happens after the invocation of /proc/self/exe init},
+  note   = {May 10, 2023},
+  url    = {{\url{https://stackoverflow.com/a/76220640}. [Accessed: \today]}}
+}
+
+@article{spr:1,
+  author     = {Wang, Xingyu and Du, Junzhao and Liu, Hui},
+  title      = {Performance and isolation analysis of RunC, gVisor and Kata Containers runtimes},
+  year       = {2022},
+  issue_date = {April 2022},
+  volume     = {25},
+  number     = {2},
+  pages      = {1497-1513},
+  url        = {\url{https://doi.org/10.1007/s10586-021-03517-8}},
+  doi        = {10.1007/s10586-021-03517-8},
+  journal    = {Cluster Computing}
+}
+
+@inproceedings{spr:2,
+  author    = {Lei, Lingguang and Sun, Jianhua and Sun, Kun and Shenefiel, Chris and Ma, Rui and Wang, Yuewu and Li, Qi},
+  title     = {SPEAKER: Split-Phase Execution of Application Containers},
+  booktitle = {Detection of Intrusions and Malware, and Vulnerability Assessment},
+  year      = {2017},
+  publisher = {Springer International Publishing},
+  address   = {Cham},
+  pages     = {230-251},
+  url       = {\url{https://doi.org/10.1007/978-3-319-60876-1_11}}
+}
+
