--- a/letters/yaroslav.tex
+++ b/letters/yaroslav.tex
@@ -1,9 +1,10 @@
-\documentclass{letter}
+\documentclass[12pt]{letter}
+\usepackage[a4paper,left=3cm, right=3cm, top=3cm, bottom=3cm]{geometry}
 \usepackage{hyperref}
 \hypersetup{colorlinks=true, linkcolor=black, filecolor=blue, citecolor=black, urlcolor=blue}
 
 \begin{document}
-\signature{Yaroslav E. Mescheryakov \\ Associate Professor at the Department of Cyber-Physical Systems Information Security \\ HSE University \\ \url{ymeshcheryakov@hse.ru}}
+\signature{Yaroslav E. Meshcheryakov \\ Associate Professor at the Department of Cyber-Physical Systems Information Security \\ HSE University \\ \url{ymeshcheryakov@hse.ru}}
 
 \begin{letter}{}
 \opening{Dear Admission Committee,}
@@ -14,7 +15,7 @@ Aleksei was initially introduced to me during his participation in the “Digita
 
 Later in his degree, Aleksei attended my courses on System Programming and Electronics and Electric Engineering. He was an attentive and active participant in the class, demonstrating interest in the architecture of modern computing systems and low-level development. In addition to completing his assignments successfully, Aleksei regularly presented on topics that he was passionate about and participated in group work in the laboratory.
 
-I have been pleased to observe Aleksei's passion for exploration during our classes over these past few years, and I am confident in his ability to succeed in your master's program. I would appreciate it if you could consider his application favorably.
+I have been pleased to observe Aleksei's passion for exploration during our classes over these past few years, and I am confident in his ability to succeed in your master's program. I would appreciate it if you could consider his application favourably.
 
 \closing{Sincerely,}
 
