--- a/letters/vv.tex
+++ b/letters/vv.tex
@@ -1,4 +1,5 @@
-\documentclass{letter}
+\documentclass[12pt]{letter}
+\usepackage[a4paper,left=3cm, right=3cm, top=3cm, bottom=3cm]{geometry}
 \usepackage{hyperref}
 \hypersetup{colorlinks=true, linkcolor=black, filecolor=blue, citecolor=black, urlcolor=blue}
 
